# libfprint

./: .gitlab-ci.yml  meson.build
examples/: gtk-libfprint-test.c  gtk-libfprint-test.ui  meson.build
libfprint/: drivers_api.h  fp_internal.h  fpi-core.c  fpi-data.c  fpi-dev-img.c  fpi-poll.c  meson.build
libfprint/drivers/: elan.c  etes603.c  upeksonly.c  upekts.c  uru4000.c  vfs101.c  vfs301.c  vfs5011.c
